vercre-vci/src/endpoint/snapshots/vercre_vci__endpoint__authorize__tests__authzn-state.snap
---
source: vercre-vci/src/endpoint/authorize.rs
assertion_line: 458
expression: state
---
credential_issuer: "http://credibil.io"
client_id: "did:jwk:eyJjcnYiOiJYMjU1MTkiLCJrdHkiOiJPS1AiLCJ1c2UiOiJlbmMiLCJ4IjoiM0xnOXl2aUFtVERDdVZPeUxYSTNscTlTMnBIbTczeXIzd3dBa2p3Q0FodyJ9"
expires_at: "[expires_at]"
credential_configuration_ids:
  - EmployeeID_JWT
holder_id: normal_user
auth:
  redirect_uri: "http://localhost:3000/callback"
  code_challenge: "[code_challenge]"
  code_challenge_method: S256
  authorization_details:
    - type: openid_credential
      format: jwt_vc_json
      credential_definition:
        type:
          - VerifiableCredential
          - EmployeeIDCredential

